# 3dPrint

./: .clang-format  .gitignore  README.md
GCodeReader/: .gitignore  CMakeLists.txt  README.md  main.cpp  usart_ctrl.cpp  usart_ctrl.hpp
GCodeReader/examples/: test.gcode
GCodeReader/include/: arc.hpp  arguments.hpp  file_reader.hpp  instruction.hpp  instruction_list.hpp  instructions.hpp  messaging.hpp  parameters.hpp  parser.hpp  uart_ctrl.hpp  usart_ctrl.hpp  vec.hpp
GCodeReader/include/parser/: file_reader.hpp  instructions.hpp  parser.hpp  vec.hpp
GCodeReader/include/test/: uart_test.hpp  usart_test.hpp
GCodeReader/src/: CMakeLists.txt  arc.cpp  arguments.cpp  file_reader.cpp  gcode.cpp  instruction.cpp  instruction_list.cpp  instructions.cpp  main.cpp  messaging.cpp  parameters.cpp  parser.cpp  uart_ctrl.cpp  usart_ctrl.cpp  vec.cpp
GCodeReader/src/parser/: file_reader.cpp  instructions.cpp  parser.cpp  vec.cpp
GCodeReader/test/: CMakeLists.txt  file_reader_test.cpp  printer_parser_test.cpp  uart_test.cpp  usart_test.cpp
GCodeReader/test/resources/: FileReaderTest__readLine.gcode  FileReaderTest__readLine_WhenEmptyLine.gcode  FileReaderTest__readLine_WhenTrailingComment.gcode
PrinterCtrl/: .gitignore  .mxproject  .project  Makefile  PrinterCtrl.ioc  README.md  STM32F411RETx_FLASH.ld  startup_stm32f411xe.s
PrinterCtrl/Core/Inc/: commands.h  devices.h  gpio.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
PrinterCtrl/Core/Inc/Test/: dac_test.h  laser_test.h  usart_test.h
PrinterCtrl/Core/Src/: commands.c  devices.c  gpio.c  main.c  printer_ctrl.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  usart.c
PrinterCtrl/Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h  tz_context.h
PrinterCtrl/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_spi.h  stm32f4xx_hal_tim.h  stm32f4xx_hal_tim_ex.h  stm32f4xx_hal_uart.h
PrinterCtrl/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_pwr.c  stm32f4xx_hal_pwr_ex.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_rcc_ex.c  stm32f4xx_hal_spi.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  (+1 more)
PrinterCtrl/Inc/: commands.h  controller.h  galvo.h  gpio.h  main.h  messaging.h  printer_ctrl.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
PrinterCtrl/Inc/Test/: dac_test.h  galvo_test.h  laser_test.h  usart_test.h
PrinterCtrl/Src/: commands.c  controller.c  galvo.c  gpio.c  main.c  messaging.c  printer_ctrl.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  usart.c
docs/laser/: laser.txt  laser.yaml
(+294 files in other folders)
